--- a/web-canvas/.gitignore
+++ b/web-canvas/.gitignore
@@ -10,10 +10,11 @@
 /coverage
 
 # next.js
-
+/.next/
+/out/
 
 # production
-
+/build
 
 # misc
 .DS_Store
@@ -24,8 +25,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
+# local env files
+.env*.local
 
 # vercel
-# typescript
+.vercel
 
+# typescript
+*.tsbuildinfo
+next-env.d.ts
