--- a/web-canvas/package.json
+++ b/web-canvas/package.json
@@ -18,9 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "socket.io-client": "^4.7.5"
-  },
-  "devDependencies": {
+    "socket.io-client": "^4.7.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
